Documentation and warning alterations for abilities